kubernetes/apps/homer/base/homer.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: homer
  name: homer
  labels:
    kalexlab.xyz/app: homer
spec:
  type: ClusterIP
  ports:
    - name: homer
      port: 8080
      protocol: TCP
  selector:
    kalexlab.xyz/app: homer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homer
  name: homer
  labels:
    kalexlab.xyz/app: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: homer
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: homer
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always

      containers:
        - name: app
          image: "docker.io/b4bz/homer:v26.4.2"
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              memory: 1Mi
              cpu: 1m
            limits:
              memory: 20Mi
              cpu: 10m

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 3
            periodSeconds: 30

          volumeMounts:
            - mountPath: /www/assets
              name: homer-assets

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: homer-conf
          configMap:
            name: homer-conf
        - name: homer-assets
          emptyDir:
            sizeLimit: 1Gi
