kubernetes/apps/homer/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: homer
  name: homer-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`homer.kalexlab.xyz`)
      services:
        - name: homer
          port: 8080
  tls:
    secretName: homer-ingress-certificate-secret
